# GuessMyDrawing

./: README.md
.github/workflows/: test_project.yaml
07-GuessMyDrawing/: .gitignore  07-GuessMyDrawing.pro  CMakeLists.txt  MessageType.h
07-GuessMyDrawing/Application/: Application.pro  CMakeLists.txt  MessageReceivedEnum.h  canvas.cpp  canvas.h  canvasserializer.cpp  canvasserializer.h  chooseword.cpp  chooseword.h  chooseword.ui  client.cpp  client.h  existingrooms.cpp  existingrooms.h  existingrooms.ui  game.cpp  game.h  game.ui  guess.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageparser.cpp  messageparser.h  pctr2.qrc  popup.cpp  popup.h  popup.ui  settings.cpp  settings.h  settings.ui
07-GuessMyDrawing/Server/: CMakeLists.txt  Server.pro  ServerMessageEnum.h  main.cpp  room.cpp  room.h  server.cpp  server.h  servermainwindow.cpp  servermessageparser.cpp  servermessageparser.h  thread.cpp  thread.h
tests/: client_test.cpp  messageparser_test.cpp  room_test.cpp  server_messageparser_test.cpp  server_test.cpp  test.cpp  test.pro
